tests/front_end/input/type_errors/indir_lvl_mismatch.wl
//E<6:7>: Indirection level mismatch (1 vs 2)
int main() {
    int a = 0;
    int *b = &a;
    int **c = &b;
    b = c;
}